<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:orientation="horizontal"
    android:padding="10dp" >

    <ToggleButton
        android:id="@+id/toggleButtonAlert"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="0" />

    <TextView
        android:id="@+id/textViewAlert"
        android:layout_column="1"
        android:layout_gravity="left|center_vertical"
        android:layout_row="0"
        android:padding="5dp"
        android:text="@string/alert_tone"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ToggleButton
        android:id="@+id/toggleButtonVibration"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="1" />

    <TextView
        android:id="@+id/textViewVibration"
        android:layout_column="1"
        android:layout_gravity="left|center_vertical"
        android:layout_row="1"
        android:padding="5dp"
        android:text="@string/vibration"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <ToggleButton
        android:id="@+id/toggleButtonPreventSleep"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="2" />

    <TextView
        android:id="@+id/textViewPreventSleep"
        android:layout_column="1"
        android:layout_gravity="left|center_vertical"
        android:layout_row="2"
        android:padding="5dp"
        android:text="@string/count_during_powersave"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ToggleButton
        android:id="@+id/toggleButtonScreenOn"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="4" />

    <TextView
        android:id="@+id/textViewScreenOn"
        android:layout_column="1"
        android:layout_gravity="left|center_vertical"
        android:layout_row="4"
        android:padding="5dp"
        android:text="@string/force_screen_to_stay_on"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ToggleButton
        android:id="@+id/toggleButtonSpeech"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="6" />

    <TextView
        android:id="@+id/textViewSpeech"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="6"
        android:padding="5dp"
        android:text="@string/speech"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</GridLayout>