<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NDCalcFragment" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="7"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textlabelshutter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/shutter"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ListView
                android:id="@+id/list_shutterspeed"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="fill_vertical|left"
                android:layout_margin="5dp"
                android:layout_marginBottom="30dp"
                android:choiceMode="singleChoice"
                android:scrollbars="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textlabelfilter1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/filter"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ListView
                android:id="@+id/list_filter"
                style="@layout/dense_list_item"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="fill_vertical|right"
                android:layout_margin="5dp"
                android:choiceMode="singleChoice"
                android:scrollbars="none" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/texttime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:text="@string/h_m_s"
        android:textSize="60sp" />

    <Button
        android:id="@+id/startstopbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="50dip"
        android:visibility="visible" />
</LinearLayout>